platform/bootstrap/vault/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ui
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - vault.k8s.va.atmodev.net
      secretName: vault-ui-tls
  rules:
    - host: vault.k8s.va.atmodev.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: secrets-vault-active
                port:
                  number: 8200
